--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,12 @@
 			<version>${cdh.version}</version>
 			<scope>runtime</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>org.apache.pig</groupId>
+			<artifactId>pig</artifactId>
+			<version>${pig.version}</version>
+			<scope>runtime</scope>
+		</dependency>
 
 	</dependencies>
 
@@ -91,8 +96,4 @@
 			<name>Cloudera Repository</name>
 		</repository>
 	</repositories>
-
-
-
-	<artifactId>cluster-test</artifactId>
 </project>
