--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
 			<version>${cdh.version}</version>
 			<scope>runtime</scope>
 		</dependency>
+                <dependency>
+                        <groupId>org.apache.pig</groupId>
+                        <artifactId>pig</artifactId>
+                        <version>${pig.version}</version>
+                        <scope>runtime</scope>
+                </dependency>
 
 	</dependencies>
 
